[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/PixelEmulator-xq08.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/HUD/HighScoreValue.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.760784, 0.760784, 0.760784, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.968627, 0.0431373, 0.654902, 1 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=7]
action = "ui_select"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 120, 360 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -58.5
margin_bottom = 58.5
custom_fonts/font = SubResource( 1 )
text = "BOUND DOWN TO SURVIVE"
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -100.0
margin_right = 96.0
margin_bottom = -100.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
shortcut = SubResource( 8 )
text = "START"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="TouchScreenButtonLeft" type="TouchScreenButton" parent="."]
position = Vector2( 120, 360 )
shape = SubResource( 6 )
action = "ui_left"

[node name="TouchScreenButtonRight" type="TouchScreenButton" parent="."]
position = Vector2( 360, 360 )
shape = SubResource( 6 )
action = "ui_right"

[node name="HighScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 99.9337
margin_bottom = 147.934
custom_fonts/font = SubResource( 9 )
text = "High Score"
align = 1

[node name="HighScoreValue" type="Label" parent="." groups=[
"Persist",
]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -480.0
margin_top = 152.529
margin_bottom = 191.529
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1
script = ExtResource( 3 )
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
